feat(controllers, requests, services): Create upvote method for News (NEWS-1)
