# storage/api-docs/api-docs.json
@@ -142,6 +142,45 @@
                     }
                 }
             }
+        },
+        "/news/upvote/{type}/{id}": {
+            "post": {
+                "tags": [
+                    "News"
+                ],
+                "summary": "Upvote News",
+                "operationId": "NewsUpvote",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "422": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvalidDataResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
